--- a/src/pages/admin/RecrEvents.css
+++ b/src/pages/admin/RecrEvents.css
@@ -12,6 +12,7 @@
     font-weight: 700;
     font-size: 14px;
     margin-top: 20px;
+    cursor: pointer;
     
 }
 
